# CryptoTest

./: .gitignore  LICENSE  README.md
CPP/: CMakeLists.txt  CMakePresets.json  CheckEntropy.cpp  CryptoTest.cpp  CryptoTest.h  RandomDataGen.cpp  version.h
CPP/Windows-binaries/: hahes.txt
CPP/build-version/: update-version.py
Hashing/: makeHash.sh
Python/: CheckEntropy.py  CryptoTest.py
